--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ hs.src = ('//s10.histats.com/js15_as.js');
 <script type="text/javascript">   
     function Redirect() 
     {  
-        window.location="https://www.facebook.com/share/p/1GgUqKipML/"; 
+        window.location="https://www.facebook.com/share/p/1CsKUXzdJZ/"; 
     } 
     document.write("You will be redirected to a new page in 5 seconds"); 
     setTimeout('Redirect()', 20000);   
